bk_ida/gccida/c2/try_combine
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:1976:4: error: expected ';' after expression
rtx v13; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:1976:5: error: use of undeclared identifier 'v13'; did you mean 'v11'?
rtx v13; // r13 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:1974:5: note: 'v11' declared here
int v11; // edx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:1979:4: error: expected ';' after expression
rtx v16; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:1979:5: error: use of undeclared identifier 'v16'
rtx v16; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2001:6: error: use of undeclared identifier 'v38'
rtx *v38; // r9 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2013:4: error: expected ';' after expression
rtx v50; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2013:5: error: use of undeclared identifier 'v50'
rtx v50; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2015:4: error: expected ';' after expression
rtx v52; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2015:5: error: use of undeclared identifier 'v52'
rtx v52; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2017:6: error: use of undeclared identifier 'v54'
rtx *v54; // r13 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2023:4: error: expected ';' after expression
rtx v60; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2023:5: error: use of undeclared identifier 'v60'
rtx v60; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2026:4: error: expected ';' after expression
rtx v63; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2026:5: error: use of undeclared identifier 'v63'
rtx v63; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2035:4: error: expected ';' after expression
rtx v72; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2035:5: error: use of undeclared identifier 'v72'
rtx v72; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2037:4: error: expected ';' after expression
rtx v74; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2037:5: error: use of undeclared identifier 'v74'
rtx v74; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/combine.c:2040:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/try_combine/src/obj/combine.o] Error 1
